--- a/init_python.tex
+++ b/init_python.tex
@@ -131,7 +131,7 @@
 \begin{enumerate}
 \item Qu'est ce que la programmation 
 \item Python 
-\item Exemples
+\item Exercices
 \end{enumerate}
 
 \end{frame}
@@ -147,7 +147,7 @@
    \begin{description}
       \item[1.] dans une case mémoire (variable) je mets 1
       \item[2.] au contenu de la case mémoire, j'ajoute 2
-      \item[2.] au contenu de la case, j'ajoute 3 
+      \item[3.] au contenu de la case, j'ajoute 3 
       \item[...] .....
       \item[n.] au contenu de la case mémoire, j'ajoute $n$ 
       \item[n+1.] je retourne le contenu de la case mémoire
@@ -319,7 +319,7 @@ for m in l:
 \begin{algorithmic}
 \Function{est\_un\_carre}{$x$}
    %\If {$\sqrt{x} \dot \sqrt{x} = x$}
-   \If { $x = x$}
+   \If { $\sqrt{x} \times \sqrt{x}= x$}
        \State{\textbf{retourner} vrai}
     \Else 
        \State{\textbf{retourner} faux}
@@ -337,4 +337,34 @@ def est_un_carre(x):
 \end{columns}
 \end{itemize}
 \end{frame}
+\begin{frame}[fragile]
+\frametitle{Exo 1 : chaînes de caractères}
+\begin{itemize} 
+  \item ecrire une fonction qui prend une chaine $s$ et qui retourne la chaine a l'envers
+  \item ecrire une fonction qui norme les chaines : pas de majuscule, d'espace de ponctuation ou d'apostrophe 
+  \item ecrire une fonction qui verifie qu'une chaine est un palindrome, après normage.
+  \begin{itemize}
+    \item  Laval, ici, Laval
+    \item tu l'as trop ecrase César ce port salut
+    \item Esope reste ici et se repose.
+  \end{itemize}
+\end{itemize}
+\end{frame}
+\begin{frame}[fragile]
+\frametitle{Exo 2 : énigme mathematique}
+\begin{itemize} 
+ \item je cherche un nombre entier $p$, tel que $p-1$ soit un carré, et $p+1$ un cube
+ \item indice : il est entre 1 et 100.
+ \item écrire une fonction est\_un\_cube en utilisant la fontion racine cubique donnee.
+ \item faire une boucle enumerative entre 1 et 100 et tester par force brute chaque nombre
+\end{itemize}
+\end{frame}
+\begin{frame}
+\frametitle{Exo 3 : animation graphique}
+\begin{itemize} 
+   \item on souhaite faire rebondir une sphere avec la bibliothèque VTK
+\end{itemize}
+\end{frame}
+
+
 \end{document}
