--- a/init_python.tex
+++ b/init_python.tex
@@ -340,11 +340,11 @@ def est_un_carre(x):
 \begin{frame}[fragile]
 \frametitle{Exo 1 : chaînes de caractères}
 \begin{itemize} 
-  \item ecrire une fonction qui prend une chaine $s$ et qui retourne la chaine a l'envers
-  \item ecrire une fonction qui norme les chaines : pas de majuscule, d'espace de ponctuation ou d'apostrophe 
-  \item ecrire une fonction qui verifie qu'une chaine est un palindrome, après normage.
+  \item écrire une fonction qui prend une chaine $s$ et qui retourne la chaine a l'envers
+  \item écrire une fonction qui norme les chaines : pas de majuscule, d'espace de ponctuation ou d'apostrophe 
+  \item écrire une fonction qui verifie qu'une chaine est un palindrome, après normage.
   \begin{itemize}
-    \item  Laval, ici, Laval
+    \item Laval, ici, Laval
     \item tu l'as trop ecrase César ce port salut
     \item Esope reste ici et se repose.
   \end{itemize}
@@ -362,7 +362,7 @@ def est_un_carre(x):
 \begin{frame}
 \frametitle{Exo 3 : animation graphique}
 \begin{itemize} 
-   \item on souhaite faire rebondir une sphere avec la bibliothèque VTK
+   \item on souhaite faire rebondir une sphére avec la bibliothèque VTK
 \end{itemize}
 \end{frame}
 
